fix(main): overflow

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,13 +3,7 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
-
-    &:has(main .home-page) {
-        nav,
-        footer {
-            background-color: transparent !important;
-        }
-    }
+    // overflow-y: auto;
 
     nav {
         height: 50px;
@@ -18,10 +12,23 @@
 
     main {
         flex: 1;
+        &:has(.user-details, .user-list) {
+            overflow: auto;
+        }
     }
 
     footer {
         height: 30px;
         z-index: 2;
+    }
+
+    &:has(main .home-page) {
+        nav,
+        footer {
+            background-color: transparent !important;
+        }
+        main {
+            // overflow-y: hidden !important;
+        }
     }
 }
